--- a/views/drug-list.ejs
+++ b/views/drug-list.ejs
@@ -13,198 +13,136 @@
       <div class="container">
         <div class="col-md-3">
           <div class="grid-container">
-            <div class="row">
-              <div class="card-box">
-                <h4 class="header-title m-t-0">
-                  <b>Tên thuốc</b>
-                </h4>
-                <div class="row">
-                  <form role="search">
+            <form role="search" method="GET" action="/drug-list">
+              <div class="row">
+                <div class="card-box">
+                  <h4 class="header-title m-t-0">
+                    <b>Tên thuốc</b>
+                  </h4>
+                  <div class="row">
                     <input
                       type="text"
                       placeholder="Nhập tên thuốc..."
                       class="form-control"
+                      name="TENSP"
                     />
-                  </form>
+                  </div>
+                </div>
+
+                <div class="card-box">
+                  <h4 class="header-title m-t-0">
+                    <b>Loại thuốc</b>
+                  </h4>
+                  <div class="row">
+                    <ul style="list-style-type: none;">
+                      <li>
+                        <input id="giamdau" type="radio" name="type" /><label
+                          for="giamdau"
+                        >
+                          Giảm đau hạ sốt
+                        </label>
+                      </li>
+                      <li>
+                        <input id="tieuhoa" type="radio" name="type" />
+                        <label for="tieuhoa">
+                          Tiêu hóa
+                        </label>
+                      </li>
+                      <li>
+                        <input id="hohap" type="radio" name="type" />
+                        <label for="hohap">
+                          Hô hấp
+                        </label>
+                      </li>
+                      <li>
+                        <input id="diung" type="radio" name="type" />
+                        <label for="diung">
+                          Chống dị ứng
+                        </label>
+                      </li>
+                      <li>
+                        <input id="timmach" type="radio" name="type" />
+                        <label for="timmach"> Tim mạch huyết áp </label>
+                      </li>
+                      <li>
+                        <input id="khangvirus" type="radio" name="type" />
+                        <label for="khangvirus">
+                          Kháng virus
+                        </label>
+                      </li>
+                      <li>
+                        <input id="khangviem" type="radio" name="type" />
+                        <label for="khangviem">
+                          Kháng viêm
+                        </label>
+                      </li>
+                      <li>
+                        <input id="vitamin" type="radio" name="type" />
+                        <label for="vitamin">
+                          Vitamin và khoáng chất
+                        </label>
+                      </li>
+                      <li>
+                        <input id="tietnieu" type="radio" name="type" />
+                        <label for="tietnieu"> Tiết niệu </label>
+                      </li>
+                      <li>
+                        <input id="khangnam" type="radio" name="type" />
+                        <label for="khangnam"> Kháng nấm </label>
+                      </li>
+                      <li>
+                        <input id="tieuduong" type="radio" name="type" />
+                        <label for="tieuduong">
+                          Tiểu đường
+                        </label>
+                      </li>
+                    </ul>
+                  </div>
                 </div>
               </div>
-              <div class="card-box">
-                <h4 class="header-title m-t-0">
-                  <b>Nhóm thuốc</b>
-                </h4>
-                <div class="row">
-                  <div class="radio">
-                    <input type="radio" name="radio" id="ketoa" value="ketoa" />
-                    <label for="ketoa">
-                      Kê toa
-                    </label>
-                  </div>
-                  <div class="radio">
-                    <input
-                      type="radio"
-                      name="radio"
-                      id="khongketoa"
-                      value="khongketoa"
-                    />
-                    <label for="khongketoa">
-                      Không kê toa
-                    </label>
-                  </div>
-                </div>
-              </div>
-              <div class="card-box">
-                <h4 class="header-title m-t-0">
-                  <b>Loại thuốc</b>
-                </h4>
 
-                <div
-                  id="myModal"
-                  class="modal fade"
-                  tabindex="-1"
-                  role="dialog"
-                  aria-labelledby="myModalLabel"
-                  aria-hidden="true"
-                >
-                  <div class="modal-dialog">
-                    <div class="modal-content">
-                      <div class="modal-header">
-                        <button
-                          type="button"
-                          class="close"
-                          data-dismiss="modal"
-                          aria-hidden="true"
-                        >
-                          ×
-                        </button>
-                        <h4 class="modal-title" id="myModalLabel">
-                          Lựa chọn tag loại thuốc
-                        </h4>
-                      </div>
-
-                      <div class="modal-body">
-                        <div class="row">
-                          <div class="col-md-6">
-                            <div class="grid-container">
-                              <div class="checkbox checkbox-circle">
-                                <input id="giamdau" type="checkbox" />
-                                <label for="giamdau">
-                                  Giảm đau hạ sốt
-                                </label>
-                              </div>
-                              <div class="checkbox checkbox-circle">
-                                <input id="tieuhoa" type="checkbox" />
-                                <label for="tieuhoa">
-                                  Tiêu hóa
-                                </label>
-                              </div>
-                              <div class="checkbox checkbox-circle">
-                                <input id="hohap" type="checkbox" />
-                                <label for="hohap">
-                                  Hô hấp
-                                </label>
-                              </div>
-                              <div class="checkbox checkbox-circle">
-                                <input id="diung" type="checkbox" />
-                                <label for="diung">
-                                  Chống dị ứng
-                                </label>
-                              </div>
-                              <div class="checkbox checkbox-circle">
-                                <input id="timmach" type="checkbox" />
-                                <label for="timmach">
-                                  Tim mạch huyết áp
-                                </label>
-                              </div>
-                              <div class="checkbox checkbox-circle">
-                                <input id="tietnieu" type="checkbox" />
-                                <label for="tietnieu">
-                                  Tiết niệu
-                                </label>
-                              </div>
-                            </div>
-                          </div>
-                          <div class="col-md-6">
-                            <div class="grid-container">
-                              <div class="checkbox checkbox-circle">
-                                <input id="khangnam" type="checkbox" />
-                                <label for="khangnam">
-                                  Kháng nấm
-                                </label>
-                              </div>
-                              <div class="checkbox checkbox-circle">
-                                <input id="khangvirus" type="checkbox" />
-                                <label for="khangvirus">
-                                  Kháng virus
-                                </label>
-                              </div>
-                              <div class="checkbox checkbox-circle">
-                                <input id="tieuduong" type="checkbox" />
-                                <label for="tieuduong">
-                                  Tiểu đường
-                                </label>
-                              </div>
-                              <div class="checkbox checkbox-circle">
-                                <input id="khangviem" type="checkbox" />
-                                <label for="khangviem">
-                                  Kháng viêm
-                                </label>
-                              </div>
-                              <div class="checkbox checkbox-circle">
-                                <input id="vitamin" type="checkbox" />
-                                <label for="vitamin">
-                                  Vitamin và khoáng chất
-                                </label>
-                              </div>
-                            </div>
-                          </div>
-                        </div>
-                      </div>
-                      <div class="modal-footer">
-                        <button
-                          type="button"
-                          class="btn btn-default waves-effect"
-                          data-dismiss="modal"
-                        >
-                          Đóng
-                        </button>
-                        <button
-                          type="button"
-                          class="btn btn-primary waves-effect waves-light"
-                        >
-                          OK
-                        </button>
-                      </div>
-                    </div>
-                    <!-- /.modal-content -->
-                  </div>
-                  <!-- /.modal-dialog -->
-                </div>
-                <!-- /.modal -->
-
+              <div class="row">
                 <button
-                  class="btn btn-primary waves-effect waves-light"
-                  data-toggle="modal"
-                  data-target="#myModal"
+                  type="submit"
+                  class="btn btn-success btn-rounded waves-effect waves-light"
                 >
-                  Chọn loại thuốc
+                  <span class="btn-label"><i class="fa fa-search"></i></span>
+                  Tìm kiếm
                 </button>
               </div>
-            </div>
-
-            <div class="row">
-              <button
-                type="button"
-                class="btn btn-success btn-rounded waves-effect waves-light"
-              >
-                <span class="btn-label"><i class="fa fa-search"></i></span>
-                Tìm kiếm
-              </button>
-            </div>
+            </form>
           </div>
         </div>
         <div class="col-md-9">
-          <div class="grid-container">
-            col-md-9
+          <div class="card-box">
+            <h4 class="m-t-0 header-title"><b>Danh sách thuốc</b></h4>
+
+            <div class="p-20">
+              <table class="table m-0">
+                <thead>
+                  <tr>
+                    <th>Mã thuốc</th>
+                    <th>Tên thuốc</th>
+                    <th>Mã loại</th>
+                    <th>Nhà cung cấp</th>
+                    <th>Số lượng</th>
+                    <th>Ngày hết hạn</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <% listProduct.forEach(function(prod){ %>
+                  <tr>
+                    <td><%= prod.MASP %></td>
+                    <td><%= prod.TENSP %></td>
+                    <td><%= prod.MALOAI %></td>
+                    <td><%= prod.MANCC %></td>
+                    <td><%= prod.SL %></td>
+                    <td><%= prod.NGAYHETHAN %></td>
+                  </tr>
+                  <% }) %>
+                </tbody>
+              </table>
+            </div>
           </div>
         </div>
       </div>
