--- a/views/import-drug.ejs
+++ b/views/import-drug.ejs
@@ -13,18 +13,20 @@
       <div class="container">
         <div class="col-md-3">
           <div class="grid-container">
+            <form  method="GET" action="/import-drug">
             <div class="row">
               <div class="card-box">
                 <h4 class="header-title m-t-0">
                   <b>Tìm kiếm</b>
                 </h4>
-                <form>
+                
                   <div class="form-group">
                     <label for="inputDrugName">Nhập tên thuốc</label>
                     <input
                       type="text"
                       placeholder="Nhập tên thuốc..."
                       class="form-control"
+                      name="TENSP"
                     />
                   </div>
                   <div class="form-group">
@@ -33,6 +35,7 @@
                       type="text"
                       placeholder="Nhập mã thuốc..."
                       class="form-control"
+                      name="MASP"
                     />
                   </div>
                   <div class="form-group">
@@ -41,23 +44,27 @@
                       type="text"
                       placeholder="Nhập nhà cung cấp thuốc..."
                       class="form-control"
+                      name="MANCC"
                     />
                   </div>
                   
-                </form>
+                
               </div>
             </div>
 
             <div class="row">
               <button
-                type="button"
+                type="submit"
                 class="btn btn-success btn-rounded waves-effect waves-light"
               >
                 <span class="btn-label"><i class="fa fa-search"></i></span>
                 Tìm kiếm
               </button>
             </div>
+          </form>
+          
           </div>
+        
         </div>
         <div class="col-md-9">
           <div class="card-box">
@@ -77,27 +84,15 @@
                         </tr>
                     </thead>
                     <tbody>
+                      <% listProduct.forEach(function(prod){ %>
                         <tr>
                           <td><input type="checkbox" name="name1" />&nbsp;</td>
-                            <td>Mark</td>
-                            <td>Otto</td>
-                            <td>@mdo</td>
+                            <td><%= prod.TENSP %></td>
+                            <td><%= prod.MASP %></td>
+                            <td><%= prod.MANCC %></td>
                             <td><input type="number" min="0"></td>
                         </tr>
-                        <tr>
-                          <td><input type="checkbox" name="name1" />&nbsp;</td>
-                            <td>Jacob</td>
-                            <td>Thornton</td>
-                            <td>@fat</td>
-                            <td><input type="number" min="0"></td>
-                        </tr>
-                        <tr>
-                          <td><input type="checkbox" name="name1" />&nbsp;</td>
-                            <td>Larry</td>
-                            <td>the Bird</td>
-                            <td>@twitter</td>
-                            <td><input type="number" min="0"></td>
-                        </tr>
+                        <% }) %>
                     </tbody>
                 </table>
             </div>
